# MLOps_TicketPricePredict

./: LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
config/: model_config.yaml
src/: __init__.py  dataset.py  features.py  plots.py
src/modeling/: predict.py  train.py
